--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,9 @@
 <a href="jobs.html">Jobs</a>
 </nav>
 <main>
+<img src="mugs.jpg" height="299px" width="400px" alt="Mugs" align="right">
 <h2>Coffee at JavaJam</h2>
+<p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste, the caffeine! Join our Mug Club and get 10% discount on each cup of coffee you purchase &mdash; ask the barista for details.</p>
 <dl>
 <dt><strong>Just Java</strong></dt>
 <dd>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.00</dd>
