--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Ellison Bay, WI 54210<br>
 </main>
 <footer>
 Copyright &copy; 2018 JavaJam Coffee House<br>
-<a href="mailto:cynthia@fischer.com">yourfirstname@yourlastname.com</a>
+<a href="mailto:cynthia@fischer.com">cynthia@fischer.com</a>
 </footer>
 </div>
 </body>
