--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
 </main>
 <footer>
 Copyright &copy; 2018 JavaJam Coffee House<br>
-<a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
+<a href="mailto:cynthia@fischer.com">cynthia@fischer.com</a>
 </footer>
 </div>
 </body>
