--- a/music.html
+++ b/music.html
@@ -40,7 +40,7 @@
 </main>
 <footer>
 Copyright &copy; 2018 JavaJam Coffee House<br>
-<a href="mailto:cynthia@fischer.com">yourfirstname@yourlastname.com</a>
+<a href="mailto:cynthia@fischer.com">cynthia@fischer.com</a>
 </footer>
 </div>
 </body>
